﻿Revision history for {{$dist->name}}

{{$NEXT}}

2.010000 2014-01-14T23:07:57Z
 [00 Major]
 - use Test::ReportPrereqs

 [Dependencies::Stats]
 - Dependencies changed since 2.009000, see Changes.deps{,.all,.dev} for
   details
 - develop: -1
 - runtime: +1 ↑2 -1
 - test: +5 ↑1

2.009000 2014-01-13T07:42:49Z
 [00 Major]
 - use # AUTHORITY comments

 [Dependencies::Stats]
 - Dependencies changed since 2.008001, see Changes.deps{,.all,.dev} for
   details
 - runtime: ↑2

2.008001 2014-01-12T22:12:04Z
 [00 Maintenace]
 - Dep ramping

 [Dependencies::Stats]
 - Dependencies changed since 2.008000, see Changes.deps{,.all,.dev} for
   details
 - develop: ↑3
 - runtime: ↑22
 - test: ↑1

2.008000 2014-01-12T11:21:22Z
 [00 Major]
 - use Git::NextRelease for commit-oriented timestamps in Changes
 - use PerlMunger replace-with-blank for better line consistency.
 - usual dependency bumping

 [Dependencies::Noteworthy]
 - need Dist::Zilla::Plugin::Git::NextRelease
 - need Pod::Elemental::PerlMunger 0.200000
 - Module::Build upgraded
 - perl 5.8 minimum ( Unusable below 5.10 anyway )
 - Dzil upgrade for new package version magic

 [Dependencies::Stats]
 - Dependencies changed since 2.007003, see Changes.deps{,.all,.dev} for
   details
 - build: ↑1
 - configure: ↑1
 - develop: ↑3
 - runtime: +3 ↑26 -1
 - test: ↑1

2.007003 2014-01-08T03:36:44Z
 [00 Minor]
 - Upgrade Moose depenencies to 2.1200

 [Dependencies::Stats]
 - Dependencies changed since 2.007002, see Changes.deps{,.all,.dev} for
   details
 - runtime: ↑2

2.007002 2014-01-08T03:20:39Z
 [00 Minor]
 - Dependency update to fix UTF8 Encoding problems
 - Apply some stricter PerlCritic policies

 [Dependencies::Stats]
 - Dependencies changed since 2.007001, see Changes.deps{,.all,.dev} for
   details
 - develop: ↑4
 - runtime: ↑26
 - test: ↑2

2.007001 2013-12-29T09:10:42Z
 [Dependencies::Stats]
 - Dependencies changed since 2.007000, see Changes.deps{,.all,.dev} for
   details
 - develop: ↑5
 - runtime: ↑25
 - test: ↑3
