@@ -118,7 +118,19 @@ sub mvp_multivalue_args { return qw( auto_prereqs_skip ) }
 has 'plugins' => ( 'is' => 'ro' =>, 'isa' => 'ArrayRef', 'init_arg' => undef, 'lazy' => 1, 'builder' => sub { [] } );
 
 has 'normal_form' => ( 'is' => ro =>, 'isa' => 'Str', 'required' => 1 );    #builder => sub { 'numify' } );
-has 'mantissa'    => ( 'is' => ro =>, 'isa' => 'Int', 'required' => 1 );    #builder => sub { 6 } );
+has 'mantissa' => (
+  'is'      => ro =>,
+  'isa'     => 'Int',
+  'lazy'    => 1,
+  'builder' => sub {
+    my ($self) = @_;
+    if ( 'numify' eq $self->normal_form ) {
+      require Carp;
+      return Carp::croak('mantissa required but not specified');
+    }
+    return 6;
+  },
+);
 
 has 'git_versions' => ( is => 'ro', isa => enum( [1] ), required => 1, );
 has 'authority'               => ( is => 'ro', isa   => 'Str',      lazy => 1, builder => sub { 'cpan:KENTNL' }, );
